# Tman

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  RELEASE_NOTES.md  config.json  dev.sh  history.db  package-lock.json  package.json  screen-translator-spec.md  start.sh  start_dev.sh  task.md  todo.md
.agents/rules/: caveman.md
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
.svelte-kit/: ambient.d.ts
.svelte-kit/output/client/.vite/: manifest.json
.svelte-kit/output/client/_app/: version.json
.svelte-kit/output/server/: index.js  manifest.js
.svelte-kit/output/server/.vite/: manifest.json
.svelte-kit/output/server/chunks/: internal.js  renderer.js  root.js
.svelte-kit/output/server/nodes/: 0.js  1.js  2.js
memory-bank/: activeContext.md  productContext.md  progress.md  projectbrief.md  systemPatterns.md  techContext.md
sidecars/: ocr_engine.py
src/: app.css  app.html
src-tauri/: Cargo.toml  config.json  history.db  tauri.conf.json
src-tauri/src/: broadcaster.rs  capture.rs  config.rs  db.rs  lib.rs  logging.rs  main.rs  ocr.rs  server.rs  translate.rs  utils.rs
src/i18n/: de.json  en.json  es.json  ja.json  ru.json  tr.json  zh.json
src/lib/: LanguagePicker.svelte  i18n.js  languages.ts  stores.ts
src/lib/components/: CustomSelect.svelte
src/lib/components/tabs/: AppTab.svelte  CaptureTab.svelte  HistoryTab.svelte  OcrTab.svelte  OptionsTab.svelte  ServerTab.svelte  ShortcutsTab.svelte  TranslateTab.svelte
src/routes/: +layout.svelte  +page.svelte
web-ui/: index.html
(+17 files in other folders)
