[package]
name = "tman"
version = "0.3.1"
description = "Tman - Screen Translator"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tman_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri-plugin-updater = "2"
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
axum = { version = "0.7", features = ["ws"] }
reqwest = { version = "0.12", features = ["json"] }
image = "0.25"
whichlang = "0.1"
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio", "tls-rustls"] }
qrcode = "0.14"
dirs = "5.0"
tower-http = { version = "0.6.10", features = ["fs", "cors"] }
futures-util = "0.3.32"
base64 = "0.22.1"
urlencoding = "2"
keyring = "3.6.1"
local-ip-address = "0.6"
oar-ocr = { git = "https://github.com/greatv/oar-ocr", features = ["auto-download"] }
log = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "ansi"] }
tauri-plugin-dialog = "2.7.1"

[profile.release]
opt-level = 3
codegen-units = 16
lto = "thin"
strip = true
panic = "abort"


